infra/overlays/prod/mailhog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: mailhog
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - $(MAILHOG_HOST)
    secretName: mailhog-tls
  rules:
  - host: $(MAILHOG_HOST)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailserver-service
            port:
              number: 8096
